examples/test/testpolicy16701.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16701
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key47: value37
      key12: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value33
          key43: value46
      podSelector:
        matchLabels:
          key46: value21
